# Burn-Train-web

./: Cargo.toml  README.md  build.bat  build.sh  chart2d.js  index.html  main.js  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
pkg/: wasm.js  wasm_bg.wasm
src/: lib.rs  model.rs  web.rs
