[package]
name = "burn-wasm-train"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.12.1", features = [
    "ndarray",
    "autodiff",
]}
burn-wgpu = { version = "0.12.1", default-features = false}
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"
log = "0.4.20"
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
wasm-logger = "0.2.0"
